--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>𝙉𝙚𝙗𝙪𝙡𝙖 𝙂𝙖𝙢𝙚𝙯 𝙝𝙖𝙨 𝙖 𝙫𝙖𝙨𝙩 𝙫𝙖𝙧𝙞𝙚𝙩𝙮 𝙤𝙛 𝙥𝙧𝙤𝙭𝙞𝙚𝙨 𝙩𝙝𝙖𝙩 𝙘𝙖𝙣 𝙪𝙣𝙗𝙡𝙤𝙘𝙠 𝙟𝙪𝙨𝙩 𝙖𝙗𝙤𝙪𝙩 𝙖𝙣𝙮𝙩𝙝𝙞𝙣𝙜!
     </div>
     <form>
-        <input placeholder="𝘚𝘦𝘢𝘳𝘤𝘩 𝘵𝘩𝘦 𝘸𝘦𝘣 𝘧𝘳𝘦𝘦𝘭𝘺">
+        <input placeholder="Enter Web link">
     </form>
     <footer>
         <a title="Made using Ultraviolet and altered by Nebula-Gamez" href="https://github.com/Nebula-Gamez">Nebula-Gamez</a>
@@ -62,10 +62,7 @@
 
         <a title="For privacy implications related to Ultraviolet." href="https://github.com/titaniumnetwork-dev/Ultraviolet/raw/main/LICENSE" style="margin-left: auto">License</a>
         <span title="Hope you like!">Nebula-Gamez &copy; NG 2023</span>
-    </footer>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
-    <script src="index.js"></script>
+        <a title="Credit to TIW for the backend" href="https://github.com/TheTIW">Credit to TIW</a>
+</footer>
 </body>
-
 </html>
