--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
     <script src="uv/uv.bundle.js" defer></script>
-    <script src="uv/uv.config.js" defer></script>
-    <script src="register-sw.js" defer></script>
-    <script src="search.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/register-sw.js" defer></script>
+    <script src="/static/search.js" defer></script>
+    <script src="/static/index.js" defer></script>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -70,7 +70,7 @@
         value="https://www.google.com/search?q=%s"
         type="hidden"
       />
-      <input id="uv-address" type="text" placeholder="Do it ;)" />
+      <input id="uv-address" type="text" placeholder="𝔼𝕟𝕥𝕖𝕣 𝕌ℝ𝕃" />
     </form>
     <div class="desc left-margin">
       <p id="uv-error"></p>
