--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="googlebot" content="index, follow, snippet" />
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
-    <script src="uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.bundle.js" defer></script>
     <script src="/static/uv/uv.config.js" defer></script>
     <script src="/static/register-sw.js" defer></script>
     <script src="/static/search.js" defer></script>
