--- a/index.html
+++ b/index.html
@@ -1,89 +1,63 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <link rel="icon" type="image/x-icon" href="./logo.png"/>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Nebula Prx</title>
-    <meta name="description" content="Nebula Gamez has a vast variety of proxies that can unblock just about anything!" />
-    <meta name="keywords" content="proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
-    <meta name="googlebot" content="index, follow, snippet" />
-    <link href="index.css" rel="stylesheet">
-
-
-    <script type="application/ld+json">
-     />
-    <meta name="googlebot" content="index, follow, snippet" />
-    <link rel="shortcut icon" content="favicon.ico" />
-    <link rel="stylesheet" href="index.css" />
-    <script src="/static/uv/uv.bundle.js" defer></script>
-    <script src="/static/uv/uv.config.js" defer></script>
-    <script src="/static/register-sw.js" defer></script>
-    <script src="/static/search.js" defer></script>
-    <script src="/static/index.js" defer></script>
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "FAQPage",
-            "mainEntity": [{
-                "@type": "Question",
-                "name": "What is Ultraviolet (Web Proxy)?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
-                }
-            }, {
-                "@type": "Question",
-                "name": "How do I unblock sites using Ultraviolet?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
-                }
-            }, {
-                "@type": "Question",
-                "name": "What if Ultraviolet is blocked or not working?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Join the Titanium Network Discord at discord.gg/unblock!"
-                }
-            }]
-        }
-    </script>
+	<title>Navigation to Nebula</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f2f2f2;
+			margin: 0;
+			padding: 0;
+		}
+		nav {
+			background-color: #333;
+			overflow: hidden;
+		}
+		nav ul {
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			text-align: center;
+		}
+		nav li {
+			display: inline-block;
+			margin: 0 10px;
+		}
+		nav li a {
+			color: #fff;
+			text-decoration: none;
+			padding: 10px;
+			display: inline-block;
+			transition: all 0.3s ease;
+		}
+		nav li a:hover {
+			background-color: #fff;
+			color: #333;
+		}
+		main {
+			padding: 50px;
+			text-align: center;
+		}
+		h1 {
+			font-size: 36px;
+			margin: 0 0 20px 0;
+		}
+		p {
+			font-size: 18px;
+			line-height: 1.5;
+			margin-bottom: 30px;
+		}
+	</style>
 </head>
-
 <body>
-
-    <div title="Nebula-Gamez Logo" class="logo-wrapper">
-        <img class="logo" src="./logo.png"
-            alt="" />
-        <h1 title="Can unblock Just about anything!!!">ℕ𝕖𝕓𝕦𝕝𝕒-𝐆𝐚𝐦𝐞𝐳 ℙ𝕣𝕠𝕩𝕪</h1>
-    </div>
-    <div title="Nebula-Gamez PRX uses the power of service-workers and more! Unblock many sites today with Nebula-Gamez!" class="desc">
-        <p>𝙉𝙚𝙗𝙪𝙡𝙖 𝙂𝙖𝙢𝙚𝙯 𝙝𝙖𝙨 𝙖 𝙫𝙖𝙨𝙩 𝙫𝙖𝙧𝙞𝙚𝙩𝙮 𝙤𝙛 𝙥𝙧𝙤𝙭𝙞𝙚𝙨 𝙩𝙝𝙖𝙩 𝙘𝙖𝙣 𝙪𝙣𝙗𝙡𝙤𝙘𝙠 𝙟𝙪𝙨𝙩 𝙖𝙗𝙤𝙪𝙩 𝙖𝙣𝙮𝙩𝙝𝙞𝙣𝙜!
-    </div>
-    <form>
-       <form id="uv-form" class="flex-center">
-      <input
-        id="uv-search-engine"
-        value="https://www.google.com/search?q=%s"
-        type="hidden"
-      />
-      <input id="uv-address" type="text" placeholder="𝔼𝕟𝕥𝕖𝕣 𝕌ℝ𝕃" />
-    </form>
-    <div class="desc left-margin">
-      <p id="uv-error"></p>
-      <pre id="uv-error-code"></pre>
-    </div>
-    </form>
-    <footer>
-        <a title="Made using Ultraviolet and altered by Nebula-Gamez" href="https://github.com/Nebula-Gamez">Nebula-Gamez</a>
-        <a title="My games website" href="https://nebula-gamez.github.io/">My website</a>
-
-        <a title="For privacy implications related to Ultraviolet." href="https://github.com/titaniumnetwork-dev/Ultraviolet/raw/main/LICENSE" style="margin-left: auto">License</a>
-        <a title="Credit to TIW for the backend" href="https://github.com/TheTIW">Credit to TIW</a>
-        <span title="Hope you like!">Nebula-Gamez &copy; NG 2023</span>
-</footer>
+	<nav>
+		<ul>
+			<li><a href="https://nebula-prx.vercel.app/static/index.html">Nebula Home</a></li>
+		</ul>
+	</nav>
+	<main>
+		<h1>Welcome to Navigation to Nebula</h1>
+		<p>This is a simple HTML page with a navigation that leads to Nebula.</p>
+	</main>
 </body>
 </html>
