--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="https://nebula-prx.vercel.app/static/index.html">Nebula Home</a></li>
+			<li><a href="/static/index.html">Nebula Home</a></li>
 		</ul>
 	</nav>
 	<main>
-		<h1>Welcome to Navigation to Nebula</h1>
-		<p>This is a simple HTML page with a navigation that leads to Nebula.</p>
+		<h1>Welcome to Navigation to Nebula TEST</h1>
+		<p>This is a simple HTML page with a navigation that leads to Nebula. TEST</p>
 	</main>
 </body>
 </html>
